[package]
name = "dustls"
authors = ["Jonathan de Jong <jonathan@automatia.nl>"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"
keywords = ["dtls", "tls", "udp"]
description = "A pure-rust DTLS implementation"
repository = "https://github.com/ShadowJonathan/dustls"
readme = "README.md"
resolver = "2"

[dependencies]
rustls = { version = "0.20.2", features = ["tls12", "dangerous_configuration"], path = "../rustls/rustls" }
# rustls = { version = "0.20.2", features = ["tls12"], git = "https://github.com/ShadowJonathan/rustls", rev = "c8333c9ea4a37b464dffb8904f05875a7c61c60d" }
ring = "0.16.20"
sct = "0.7.0"
log = "0.4.16"